style: correct alignment

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -179,6 +179,10 @@ button {
     transition: all 0.2s ease-in-out;
     text-align: left;
 
+    @media only screen and (min-width: 768px) {
+      text-align: center;
+    }
+
     &:hover {
       opacity: 0.7;
     }
@@ -194,9 +198,6 @@ button {
         position: absolute;
         top: 50%;
         transform: translate(-50%, -50%);
-      }
-      a {
-        text-align: center;
       }
     }
   }
